sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:7: error: type mismatch;
 found   : Unit
 required: Int
    v = insertionSort(ecart)
                     ^AlgShellSort:26: warning: enclosing method insertionSort has result type Unit: return value discarded
  return(v)
  ^